<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Court Counter</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="team_a">Team A</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="team_b">Team B</string>
    <string name="send">Send</string>
    <string name="court_counter">Court-Counter</string>
    <string name="_1_point">-1 point</string>
</resources>
